--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>sandy</title>
   </head>
   <body>
-    <div class="app">
-      <canvas id="canvas" width="600" height="500"></canvas>
+    <div id="app">
+      <div id="fps"></div>
+      <canvas id="canvas"></canvas>
         <div id="controller"></div>
     </div>
     
