basic water sim, particle color randomization

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <div id="fps"></div>
       <canvas id="canvas"></canvas>
-        <div id="controller"></div>
+        <div id="controller">
+          <div id="fps">
+          </div>
+        </div>
     </div>
     
     <script type="module" src="/main.js"></script>
